# deep-research-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirement.txt
backend/alembic/: env.py  monitor.py
backend/alembic/versions/: .gitkeep  6dc864d1ffb6_initial_schema_phase2.py
backend/app/: __init__.py  main.py  test_all_agents.py  test_graph_manual.py  test_ollama_directly.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py  research.py
backend/app/core/: __init__.py  constants.py  enums.py  exceptions.py  feature_flags.py  lifecycle.py  settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/graph/: __init__.py  builder.py  state.py
backend/app/graph/agents/: __init__.py  base.py  search.py  summarizer.py  supervisor.py  synthesizer.py
backend/app/logging_/: __init__.py  setup.py
backend/app/middleware/: __init__.py  correlation_id.py  error_handler.py  request_logging.py
backend/app/models/: __init__.py  audit_log.py  execution_log.py  research_session.py  source.py
backend/app/redis_/: __init__.py  cache.py  client.py
backend/app/repositories/: __init__.py  audit_log.py  base.py  execution_log.py  research_session.py  source.py
backend/app/schemas/: __init__.py  base.py  health.py  research.py
backend/app/services/: __init__.py  chunk_storage.py  health.py  llm.py  stream.py  summarizer_pipeline.py  synthesis_pipeline.py
backend/app/utils/: chunker.py  token.py
backend/tests/: conftest.py
backend/tests/integration/: test_health_api.py  test_research_api.py
backend/tests/unit/: test_agents.py  test_chunker.py  test_feature_flags.py  test_pipelines.py  test_settings.py
docs/: CHECKPOINTS.md  PROJECT_DETAILS.md
docs/checkpoints/: CURRENT_PHASE.md  progress.md
docs/phases/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  phase_09.md  phase_10.md
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: .gitkeep
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/health/: HealthStatus.tsx
frontend/src/components/research/: CreateSessionForm.tsx  ResearchDashboard.tsx  SessionDetails.tsx  SessionList.tsx  (+1 more)
frontend/src/config/: app.config.ts  constants.ts  feature-flags.ts
frontend/src/hooks/: use-debounce.ts  use-health.ts  use-local-storage.ts  use-research-stream.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/providers/: FeatureFlagProvider.tsx  QueryProvider.tsx  index.tsx
frontend/src/store/: app.store.ts  research.store.ts
frontend/src/types/: feature-flags.ts  research.ts
infrastructure/nginx/: nginx.conf
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
infrastructure/searxng/: settings.yml
scripts/: health-check.sh  setup.sh
shared/: index.ts  package.json
shared/contracts/: api.ts  feature-flags.ts
(+1 files in other folders)
