# ============================================
# Deep Research Platform - Backend Dependencies
# ============================================
# Uses PEP 621 pyproject.toml for dependency management.
# Includes optional [dev] extras for development tooling.
# ============================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-backend"
version = "0.1.0"
description = "Enterprise AI Research Agent Platform - Backend"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    # ---------- Web Framework ----------
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # ---------- Database ----------
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ---------- Redis ----------
    "redis[hiredis]>=5.2.0",

    # ---------- Validation & Settings ----------
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # ---------- HTTP Client ----------
    "httpx>=0.28.0",

    # ---------- Logging ----------
    "structlog>=24.4.0",

    # ---------- Utilities ----------
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",

    # ---------- Agents & LLM ----------
    "langgraph>=0.0.30",
    "langchain>=0.1.10",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.30",
    "langchain-community>=0.0.25",
]

[project.optional-dependencies]
dev = [
    # ---------- Testing ----------
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",

    # ---------- Linting & Formatting ----------
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # ---------- Type Stubs ----------
    "types-redis>=4.6.0",
    "sqlalchemy[mypy]>=2.0.35",
]

# ---------- Tool Configuration ----------

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["redis.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
